# sbt-instrumentation

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap-dg.sh  bootstrap-json.sh  bootstrap-ra.sh  config.json  git-version.sh  instr  readme.md  sbt-instr-c
analyses/: CMakeLists.txt  call_graph.cpp  call_graph.hpp  check_nsw_plugin.cpp  check_nsw_plugin.hpp  dg_points_to_plugin.cpp  dg_points_to_plugin.hpp  infinite_loops_plugin.cpp  infinite_loops_plugin.hpp  llvm_points_to_plugin.cpp  llvm_points_to_plugin.hpp  points_to_plugin.cpp  points_to_plugin.hpp  predator_plugin.cpp  predator_plugin.hpp  predator_wrapper.py  range_analysis_plugin.cpp  range_analysis_plugin.hpp  value_relations_plugin.cpp  value_relations_plugin.hpp
analyses/ra/: RangeAnalysis.cpp  RangeAnalysis.h
double_free/: config-memtrack.json  config.json  double_free.c
include/: CMakeLists.txt  instr_analyzer.hpp  instr_log.hpp  instr_plugin.hpp  llvm_instr.hpp  rewriter.hpp
include/llvm/Config/: config.h  llvm-config.h
instrumentations/: CMakeLists.txt
instrumentations/double_free/: config.json
instrumentations/former-memsafety/: config.json  memsafety.c
instrumentations/int_overflow/: config.json
instrumentations/int_overflows/: config-marker.json  config-no-assert.json  config-no-ra.json  config.json  overflows-marker.c  overflows-no-assert.c  overflows.c
instrumentations/memsafety/: config-basic-lifetimes.json  config-basic.json  config-enhanced-noconst.json  config-enhanced.json  config-i2-enhanced-lifetimes.json  config-i2-enhanced.json  config-lifetimes.json  config-marker-memcleanup.json  config-marker-predator-pta.json  config-marker-predator.json  config-marker.json  config-memcleanup.json  config-minmax.json  config-noconst.json  config-onephase.json  config-simple.json  config.json  marker.c  memsafety.c
instrumentations/memsafety/sttt-experiments/: config-basic.json  config-i1-rt.json  config-new-checkbounds.json  config-rc-rt.json  config-rc.json
instrumentations/memsafety_no_plugins/: config.json
instrumentations/memsafety_one_phase/: config.json
instrumentations/null_deref/: config.json  null_deref.c
instrumentations/termination/: config.json  termination.c
instrumentations/valid_deref/: config.json  valid_deref.c
int_overflow/: config.json  int_overflow.c
lib/: CMakeLists.txt  double_free.c  instr_analyzer.hpp  instr_log.hpp  instr_plugin.hpp  rewriter.hpp
null_deref/: config.json  null_deref.c
share/llvm-instrumentation/: CMakeLists.txt
share/llvm-instrumentation/double_free/: double_free.c
share/llvm-instrumentation/int_overflow/: int_overflow.c
share/llvm-instrumentation/memsafety_one_phase/: config.json
share/llvm-instrumentation/null_deref/: config.json
share/llvm-instrumentation/valid_deref/: config.json  valid_deref.c
src/: CMakeLists.txt  git-version.h.in  instr.cpp  instr_analyzer.cpp  instr_log.cpp  instr_log.hpp  rewriter.cpp  rewriter.hpp
tests/: CMakeLists.txt  README.md  catch.hpp  test-callgraph.cpp  tested-files.json  tested-files.json.in  tests.cpp
tests/sources/: c_to_ll.sh  function_pointers01.c  function_pointers01.ll  indirect_calls01.c  indirect_calls02.c  recursive01.c  recursive01.ll  recursive02.c  recursive02.ll
valid_deref/: config.json  valid_deref.c
